콘테스트 업로드 부분 CSS 수정
콘테스트 업로드 부분 CSS 수정

--- a/src/main/resources/templates/contest/ContestUpload1.html
+++ b/src/main/resources/templates/contest/ContestUpload1.html
@@ -23,11 +23,11 @@
                     <span>🏆 1등</span>
                 </div>
                 <div class="winners">
-                    <input class="companttype" type="number" id="conFirstPeople" name="conFirstPeople" min="1" value="1" required>
+                    <input class="plusInput" type="number" id="conFirstPeople" name="conFirstPeople" min="1" value="1" required>
                 </div>
                 <span class="label-text">명</span>
                 <div class="prize">
-                    <input class="companttype" type="number" id="conFirstPrice" name="conFirstPrice" min="0" step="5" value="35" required>
+                    <input class="plusInput" type="number" id="conFirstPrice" name="conFirstPrice" min="0" step="5" value="35" required>
                 </div>
                 <span class="label-text">만원</span>
                 <div class="remove-btn-container"></div>
