--- a/src/main/resources/static/css/contest/ContestUpload1.css
+++ b/src/main/resources/static/css/contest/ContestUpload1.css
@@ -1,13 +1,14 @@
 
         .Contestupload1 {
-            width: 1000px;
+            /*width: 1000px;*/
+            width: 1100px;
             margin: auto;
             background: white;
             padding: 20px;
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
-        .Contestupload1 h1 {
+        .Contestupload1 > h1 {
             font-size: 1.75em;
             margin-bottom: 50px;
             color: #333;
@@ -27,12 +28,13 @@
             color: #333;
             display: inline-block;
             margin-left: 5px;
+            margin-bottom: 10px;
             vertical-align: middle;
         }
 
         h3
         {
-            margin: 30px 0 20px 0;
+            margin: 40px 0 20px 0;
             font-size: 1.3em;
         }
 
@@ -40,7 +42,7 @@
         select {
             width: 100%;
             padding: 10px;
-            margin-bottom: 20px;
+            /*margin-bottom: 20px;*/
             border-radius: 4px;
             border: 1px solid #ccc;
             box-sizing: border-box;
@@ -72,6 +74,14 @@
         .flex-container > div {
             flex: 1;
             text-align: center;
+        }
+
+        .plusInput
+        {
+            border-radius: 6px;
+            padding: 10px;
+            border: 1px solid #ccc;
+            box-sizing: border-box;
         }
 
         .rank, .winners, .prize, .currency {
@@ -110,10 +120,13 @@
         .btn-secondary::before {
             content: "➕";
             margin-right: 5px;
+            color: #ff8c00;
         }
         .remove-btn {
-            width: 40px;
-            height: 40px;
+            /*width: 30px;*/
+            width: 30px;
+            /*height: 40px;*/
+            height: 30px;
             background-color: #e0e0e0;
             color: #656565;
             border: none;
@@ -122,6 +135,7 @@
             display: flex;
             align-items: center;
             justify-content: center;
+            font-size: 12px;
         }
         .remove-btn:hover {
             background-color: #8b8b8b;
@@ -158,13 +172,19 @@
             font-weight: bold;
         }
         .btn:hover {
-            background-color: rgb(193, 192, 255);
+            /*background-color: rgb(193, 192, 255);*/
+            background: #333;
+            color: white;
         }
         .previous-btn {
            /* background-color: #6c757d;*/
+           background: #d3d3d3;
+           color: black;
         }
         .previous-btn:hover {
-            background-color: #5a6268;
+            /*background-color: #5a6268;*/
+            background: #b3b3b3;
+            color: white;
         }
         .flex-buttons {
             display: flex;
