이벤트 리스트 재수정
이벤트 리스트 재수정

--- a/src/main/resources/static/css/notifications/eventList.css
+++ b/src/main/resources/static/css/notifications/eventList.css
@@ -72,20 +72,24 @@ a {
 
 /* 등록 버튼에 색상 추가 */
 .d-flex .btn {
+    margin-top: 50px;
+    margin-bottom: 30px;
     background-color:  #212529; /* 등록 버튼 색상 */
     border-color: #212529;
     color: white;
 }
 
 .d-flex .btn:hover {
-    background-color: rgba(193, 192, 255); /* hover 시 등록 버튼 색상 */
-    border-color: rgba(193, 192, 255);
+    background-color: #333; /* hover 시 등록 버튼 색상 */
+    border-color: #333;
     color: white;
 }
 
 /* 게시된 이벤트와 임시 저장된 이벤트 사이 간격 설정 */
-h2 {
+h1 ,h2 {
     margin-top: 50px; /* 임시 저장된 이벤트 제목 위에 간격 추가 */
+    margin-bottom: 30px;
+    font-weight:bold;
 }
 
 .expired {
