--- a/src/main/resources/static/css/notifications/eventWrite.css
+++ b/src/main/resources/static/css/notifications/eventWrite.css
@@ -1,5 +1,5 @@
 body {
-    background: linear-gradient(135deg, rgba(193, 192, 255, 0.5),rgba(193, 192, 255, 0.5));
+    background: linear-gradient(135deg, white);
 }
 
 .container {
@@ -66,53 +66,45 @@ textarea {
 }
 
 .btn-group {
-    padding: 12px 40px; /* 버튼의 넓이를 더 넓게 */
-    font-size: 16px;
-    border: none;
-    border-radius: 5px; /* 모서리 둥글기 변경 */
-    cursor: pointer;
-    transition: background-color 0.3s ease-in-out, box-shadow 0.3s ease-in-out, transform 0.2s ease-in-out;
-    font-weight: 500;
-    display: inline-block;
-}
-
-.btn-group {
-    display: flex;
-    justify-content: flex-end; /* 버튼들을 오른쪽으로 정렬 */
+    display: flex; /* Flexbox 사용 */
+    justify-content: flex-end; /* 버튼들을 오른쪽 정렬 */
+    gap: 15px; /* 버튼 간격 설정 */
+    margin: 15px;
     margin-top: 20px; /* 버튼 그룹 위에 여백 추가 */
 }
 
-.btn-primary {
-    background-color: rgb(193, 192, 255);
-    color: white;
+.btn {
+    border-radius: 6px; /* 버튼 모서리를 둥글게 설정 */
+    padding: 10px 30px; /* 버튼 내부의 여백 설정 */
+    font-size: 16px;
+    cursor: pointer;
+    transition: background-color 0.3s ease-in-out;
     font-weight: 600;
-    border: 1px solid rgb(193, 192, 255);
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* 살짝의 그림자 추가 */
-    transition: background-color 0.3s ease-in-out, transform 0.2s ease-in-out;
+    display: inline-block;
+    text-align: center; /* 텍스트를 가운데 정렬 */
+    border: none; /* 기본 테두리 제거 */
+}
+
+.btn-primary {
+    background-color: #d3d3d3;
+    color: white;
+    border: 1px solid #d3d3d3; /* 테두리 설정 */
 }
 
 .btn-primary:hover {
-    background-color: rgba(193, 192, 255, 0.8);
-    box-shadow: 0 4px 10px rgba(193, 192, 255, 0.3); /* hover 시 그림자 강조 */
-    transform: translateY(-2px); /* hover 시 살짝 위로 이동 */
-    border: 1px solid rgba(193, 192, 255, 0.8); /* hover 시 테두리 색상 변경 */
+    background-color: #b3b3b3;
+    border: 1px solid #b3b3b3; /* hover 시 테두리 색상 변경 */
 }
 
 .btn-secondary {
-    background-color: transparent;
-    color: rgb(193, 192, 255);
+    background-color: #212529;
+    color: white;
+    border: 1px solid #212529; /* 테두리 설정 */
     text-decoration: none;
-    border: 1px solid rgb(193, 192, 255);
-    padding: 10px 35px; /* 버튼의 넓이를 더 넓게 */
-    border-radius: 5px; /* 모서리 둥글기 변경 */
-    transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out, box-shadow 0.2s ease-in-out;
-    font-weight: 500;
 }
 
 .btn-secondary:hover {
-    background-color: rgb(193, 192, 255);
+    background-color: #333;
     color: white;
-    border: 1px solid rgb(193, 192, 255);
-    box-shadow: 0 4px 10px rgba(193, 192, 255, 0.3); /* hover 시 그림자 추가 */
-    transform: translateY(-2px); /* hover 시 살짝 위로 이동 */
+    border: 1px solid #333;
 }
