--- a/src/main/resources/static/css/notifications/eventWrite.css
+++ b/src/main/resources/static/css/notifications/eventWrite.css
@@ -6,7 +6,7 @@ body {
     max-width: 1100px;
     padding: 30px;
     background-color: rgba(255, 255, 255, 0.9);
-    border: 1px solid rgb(193, 192, 255);
+    border: 1px solid #212529;
     border-radius: 12px;
     box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
     transition: transform 0.3s ease-in-out;
@@ -16,7 +16,7 @@ h1 {
     font-size: 32px;
     text-align: center;
     margin-bottom: 40px;
-    color: rgb(193, 192, 255);
+    color: #212529;
     font-weight: 700;
 }
 
@@ -28,7 +28,7 @@ label {
     font-size: 18px;
     margin-bottom: 10px;
     display: block;
-    color: rgb(193, 192, 255);
+    color: #212529;
     font-weight: 600;
 }
 
@@ -39,7 +39,7 @@ input[type="time"],
 input[type="file"] {
     width: 100%;
     padding: 12px;
-    border: 1px solid rgb(193, 192, 255);
+    border: 1px solid #212529;
     border-radius: 8px;
     font-size: 16px;
     transition: box-shadow 0.3s ease-in-out;
