콘테스트 css 수정, 마이페이지 css 수정중
콘테스트 css 수정, 마이페이지 css 수정중

--- a/src/main/resources/static/css/user/MyPage.css
+++ b/src/main/resources/static/css/user/MyPage.css
@@ -133,12 +133,12 @@ font-weight: bold;
   display: none;
 }
 .sidebar .submit-button {
-  padding: 5px 10px;
+  padding: 8px 20px;
   font-size: 12px;
   background-color: #212529;
   color: white;
   border: none;
-  border-radius: 5px;
+  border-radius: 6px;
   cursor: pointer;
   margin-top: 10px;
 }
@@ -205,14 +205,14 @@ table {
     width: 100%;
     border-collapse: collapse;
     background-color: white;
-    border-radius: 10px;
     overflow: hidden;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     margin-bottom: 20px;
 }
 
 thead {
-    background-color: rgb(193, 192, 255);
+    background-color: #212529;
+    color: white;
 }
 
 thead th {
@@ -236,29 +236,31 @@ tbody td {
 
 tbody tr:hover {
     background-color: rgb(193, 192, 255, 0.2);
-    transition: background-color 0.3s ease;
+    /*transition: background-color 0.3s ease;*/
 }
 
 button.action-btn, a.action-btn {
-    background-color: rgb(193, 192, 255);
-    color: white;
+    /*background-color: rgb(193, 192, 255);*/
+    background-color: #d3d3d3;
+    color: black;
     padding: 10px 20px;
     border: none;
-    border-radius: 20px;
+    /*border-radius: 20px;*/
+    border-radius: 6px;
     font-size: 14px;
     cursor: pointer;
     text-decoration: none;
     display: inline-block;
-    transition: background-color 0.3s ease, color 0.3s ease;
+    /*transition: background-color 0.3s ease, color 0.3s ease;*/
 }
 
 button.action-btn:hover, a.action-btn:hover {
-    background-color: black;
+    background-color: #b3b3b3;
     color: white;
 }
 
 /* 테이블 셀 둥글게 */
-thead th:first-child, tbody td:first-child {
+/*thead th:first-child, tbody td:first-child {
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
 }
@@ -267,7 +269,7 @@ thead th:last-child, tbody td:last-child {
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
 }
-
+*/
 h3 {
     font-size: 17px;
     font-weight: bold;
