--- a/src/main/resources/static/css/contest/ContestPay2.css
+++ b/src/main/resources/static/css/contest/ContestPay2.css
@@ -1,19 +1,27 @@
 
 
         .Contestpayment {
-            max-width: 600px;
+            /*max-width: 600px;*/
+            width: 900px;
             margin: auto;
             background: white;
             padding: 20px;
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
+
+        h3
+        {
+            font-size: 1.4em;
+        }
+
         .Contestpayment h1 {
-            font-size: 1.75em;
+            font-size: 1.8em;
             margin-bottom: 50px;
             color: #333;
             display: flex;
             align-items: center;
+            font-weight: 700;
         }
         .Contestpayment h1::before {
             content: "👉";
@@ -21,31 +29,57 @@
             font-size: 1.5em;
             color: #f5b000;
         }
-        .info, .payment-info, .pay {
+        .wrap
+        {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            padding-left: 100px;
+        }
+
+        h3
+        {
             margin-bottom: 20px;
+        }
+
+        .info, .payment-info, .pay {
+            margin-bottom: 40px;
+            text-align: left
         }
         .info p, .payment-info p, .pay p {
             margin: 5px 0;
         }
+
+        .btn-container
+        {
+            display: flex;
+            gap: 50px;
+        }
+
         .btn {
+            width: 150px;
             display: inline-block;
-            padding: 10px 20px;
-            background-color: #007bff;
-            color: white;
+            padding: 8px 20px;
+            background-color: #d3d3d3;
+            color: black;
             text-decoration: none;
-            border-radius: 5px;
+            border-radius: 6px;
+            box-sizing: border-box;
         }
         .btn:hover {
-            background-color: #0056b3;
+            background-color: #b3b3b3;
+            color: white;
         }
         .apibtn {
+            width: 150px;
             display: inline-block;
-            padding: 10px 20px;
-            background-color: #007bff;
+            padding: 8px 20px;
+            background-color: #212529;
             color: white;
             text-decoration: none;
-            border-radius: 5px;
+            border-radius: 6px;
         }
         .apibtn:hover {
-            background-color: #0056b3;
+            background-color: #333;
+            color: white;
         }
