--- a/src/main/resources/templates/contest/ContestPay2.html
+++ b/src/main/resources/templates/contest/ContestPay2.html
@@ -92,34 +92,36 @@
 <div class="Contestpayment">
     <form action="/users/contest/payment/submit" method="post" enctype="multipart/form-data">
         <h1>결제 정보를 확인해주세요.</h1>
-        <div class="info">
-            <h3>의뢰자 정보</h3>
-            <p>이메일 <span id="displayuserEmail" th:text="${userEmail}"></span></p>
+        <div class="wrap">
+            <div class="info">
+                <h3>의뢰자 정보</h3>
+                <p>이메일 <span id="displayuserEmail" th:text="${userEmail}"></span></p>
 
-            <input type="hidden" id="userEmail" th:value="${userEmail}">
+                <input type="hidden" id="userEmail" th:value="${userEmail}">
 
-            <p>회사명 <span id="displaycompanyName" th:text="${contestUploadDTO.conCompanyName}"></span></p>
-            <!-- 회사명을 히든 인풋으로 저장 -->
-            <input type="hidden" id="conCompanyName" th:value="${contestUploadDTO.conCompanyName}">
+                <p>회사명 <span id="displaycompanyName" th:text="${contestUploadDTO.conCompanyName}"></span></p>
+                <!-- 회사명을 히든 인풋으로 저장 -->
+                <input type="hidden" id="conCompanyName" th:value="${contestUploadDTO.conCompanyName}">
 
-        </div>
+            </div>
 
-        <div class="payment-info">
-            <h3>상금 설정</h3>
-            <p>상금 <span id="totalPrize" th:text="${totalPrize * 10000}"></span> 원</p>
-            <!-- totalPrize 값을 히든 인풋으로 저장 -->
-            <input type="hidden" id="totalPrizeValue" th:value="${totalPrize}">
-            <p>서비스 이용료 <span id="serviceFee" th:text="${totalPrize * 2500}"></span> 원</p>
-        </div>
+            <div class="payment-info">
+                <h3>상금 설정</h3>
+                <p>상금 <span id="totalPrize" th:text="${totalPrize * 10000}"></span> 원</p>
+                <!-- totalPrize 값을 히든 인풋으로 저장 -->
+                <input type="hidden" id="totalPrizeValue" th:value="${totalPrize}">
+                <p>서비스 이용료 <span id="serviceFee" th:text="${totalPrize * 2500}"></span> 원</p>
+            </div>
 
-        <div class="pay">
-            <h3>총 금액</h3>
-            <p><span id="totalAmount" th:text="${totalPrize * 2500 + totalPrize * 10000}"></span> 원</p>
-        </div>
+            <div class="pay">
+                <h3>총 금액</h3>
+                <p><span id="totalAmount" th:text="${totalPrize * 2500 + totalPrize * 10000}"></span> 원</p>
+            </div>
 
-        <div class="btn-container">
-            <a href="javascript:history.back()" class="btn btn-back">이전</a>
-            <button type="button" onclick="requestPay()" class="apibtn">결제하기</button>
+            <div class="btn-container">
+                <a href="javascript:history.back()" class="btn btn-back">이전</a>
+                <button type="button" onclick="requestPay()" class="apibtn">결제하기</button>
+            </div>
         </div>
 
     </form>
