--- a/src/main/resources/templates/user/MyPageProfileEdit.html
+++ b/src/main/resources/templates/user/MyPageProfileEdit.html
@@ -128,10 +128,10 @@
                     <input type="checkbox" id="MAYA" name="skillName" value="MAYA" th:checked="${profile.skillName != null && profile.skillName.contains('MAYA')}">
                     <label for="MAYA" class="select-skill-item">MAYA</label>
                 </div>
-                <div class="end">
-                    <hr>
-                    <input type="reset" class="reset" value="초기화">&nbsp;&nbsp;&nbsp;&nbsp;
-                    <button type="submit" class="submit">저장하기</button>
+            <div class="end">
+                <hr>
+                <input type="reset" class="reset" value="초기화">
+                <button type="submit" class="submit">저장하기</button>
             </div>
         </div>
     </form>
