--- a/src/main/resources/static/css/contest/ContestPay2.css
+++ b/src/main/resources/static/css/contest/ContestPay2.css
@@ -53,6 +53,7 @@
         .btn-container
         {
             display: flex;
+            justify-content: end;
             gap: 50px;
         }
 
