--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -11,7 +11,7 @@
         <a th:href="@{/}">
             <img th:src="@{/img/fragments/logoGG.png}" alt="D'OH Logo" width="150px" height="75px">
         </a>
-        <h2>로그인</h2>
+<!--        <h2>로그인</h2>-->
         <form method="post" action="/users/login" enctype="multipart/form-data">
         <div class="email">이메일</div>
         <input type="text" id="email" name="username" required>
