--- a/src/main/resources/templates/contest/contestAward.html
+++ b/src/main/resources/templates/contest/contestAward.html
@@ -56,8 +56,8 @@
 
         <!-- 버튼 섹션 -->
         <div class="button-section">
-            <button type="button" class="btn btn-primary custom-btn" onclick="submitAward()">😆 제출하기</button>
-            <button type="button" class="btn btn-danger custom-btn" onclick="location.href='/users/contest/no-winner'">
+            <button type="button" class="btn primary custom-btn" onclick="submitAward()">😆 제출하기</button>
+            <button type="button" class="btn danger custom-btn" onclick="location.href='/users/contest/no-winner'">
                 😭 마음에 드는 작품이 없어요
             </button>
         </div>
