--- a/src/main/resources/static/css/contest/contestAward.css
+++ b/src/main/resources/static/css/contest/contestAward.css
@@ -6,7 +6,7 @@
     border-radius: 15px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
     margin-top: 30px;
-    max-width: 700px;
+    max-width: 1100px;
     margin-left: auto;
     margin-right: auto;
     /* 화면 중앙 정렬을 위해 추가 */
@@ -19,7 +19,7 @@
 .page-title {
     text-align: center;
     font-size: 28px;
-    color: #6c63ff; /* 귀여운 보라색 */
+    color: black; /* 귀여운 보라색 */
     margin-bottom: 15px;
 }
 
@@ -41,7 +41,8 @@
 
 /* 테이블 헤더 */
 .custom-table thead th {
-    background-color: #ffcc00; /* 헤더 배경색 */
+   /* background-color: #ffcc00; /* 헤더 배경색 */
+    background-color: #c1c0ff; /* 헤더 배경색 */
     color: #333;
     text-align: center;
     padding: 15px;
@@ -80,25 +81,45 @@
 }
 
 /* 버튼 스타일 */
+
+.button-section
+{
+    display: flex;
+    gap: 20px;
+}
+
 .custom-btn {
-    width: 100%;
-    border-radius: 20px;
-    padding: 12px;
+    width: 300px;
+    border-radius: 6px;
+    padding: 8px 20px;
     font-size: 16px;
-    transition: all 0.3s;
+    /*transition: all 0.3s;*/
     margin-top: 15px;
 }
-
+/*
 .custom-btn:hover {
     transform: scale(1.05); /* 살짝 확대 효과 */
+/*
 }
-
-.btn-primary {
-    background-color: #6c63ff; /* 보라색 버튼 */
+*/
+.primary {
+    background-color: #212529; /* 보라색 버튼 */
+    color: white;
     border: none;
 }
+.primary:hover{
+    background: #333;
+    color: white;
+}
 
-.btn-danger {
-    background-color: #ff6b6b; /* 빨간색 버튼 */
+.danger {
+    background-color: #d3d3d3; /* 빨간색 버튼 */
     border: none;
+    color: black;
+}
+
+.danger:hover
+{
+    background: #b3b3b3;
+    color: white;
 }
